# NeuralBrief

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml
app/: config.py  profile.py  services.py
app/agent/: __init__.py  config.py  curator_agent.py  digest_agent.py  email_agent.py
app/database/: __init__.py  db.py  repositories.py
app/scraper/: allure.py  youtube.py
app/services/: __init__.py  process_curator.py  process_digest.py  process_email.py  run_cleanup.py  run_curator.py  run_digest.py  run_scraper.py
docker/: Dockerfile  README.md  docker-compose.yml  init.sql
web/: .env.example  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/subscribe/: route.ts
